Fixed sign out clipping (and also mail subject clipping). Fixes #150

--- a/public/bootstrap/less/trp3Mail.less
+++ b/public/bootstrap/less/trp3Mail.less
@@ -21,6 +21,7 @@
 	font-size: 12px;
 	vertical-align: top;
 	padding-left: 5px;
+	min-width: 120px;
 	max-width: 160px;
 	overflow: hidden;
 	text-overflow: ellipsis;
